@@ -7,13 +7,13 @@
 .*: +file format .*arm.*
 Disassembly of section .text:
 0+00 <[^>]*> f7ff fffe 	bl	00+18 <[^>]*>	0: R_ARM_THM_CALL	foo2
-0+1c <[^>]*> d004      	beq.n	00+28 <[^>]*>
-0+1e <[^>]*> e003      	b.n	00+28 <[^>]*>
-0+20 <[^>]*> f000 f808 	bl	00+34 <[^>]*>
-0+24 <[^>]*> f000 f802 	bl	00+2c <[^>]*>
-0+28 <[^>]*> 46c0      	nop			; \(mov r8, r8\)
-0+2a <[^>]*> 46c0      	nop			; \(mov r8, r8\)
-0+2c <[^>]*> 46c0      	nop			; \(mov r8, r8\)
+0+04 <[^>]*> d004      	beq.n	00+10 <[^>]*>
+0+06 <[^>]*> e003      	b.n	00+10 <[^>]*>
+0+08 <[^>]*> f000 f808 	bl	00+1c <[^>]*>
+0+0c <[^>]*> f000 f802 	bl	00+14 <[^>]*>
+0+10 <[^>]*> 46c0      	nop			; \(mov r8, r8\)
+0+12 <[^>]*> 46c0      	nop			; \(mov r8, r8\)
+0+14 <[^>]*> 46c0      	nop			; \(mov r8, r8\)
 	...
-0+30 <[^>]*> e1a00000 	nop			; \(mov r0, r0\)
-0+34 <[^>]*> e1a00000 	nop			; \(mov r0, r0\)
+0+18 <[^>]*> e1a00000 	nop			; \(mov r0, r0\)
+0+1c <[^>]*> e1a00000 	nop			; \(mov r0, r0\)
