@@ -6,4 +6,4 @@
 
 Disassembly of section .text:
 00000000 <.text> f7ff fffe 	bl	00000000 <foo>
-00000004 <foo\+0x4> f3ef 8000 	mrs	r0, CPSR
+00000004 <.text\+0x4> f3ef 8000 	mrs	r0, CPSR
